@@ -1,3 +1,10 @@
+2005-12-28 Chris Kelly <ckdake@ckdake.com> 1.5.2-RC2-cvs-b1
+
+ * Fix: gTranslate relied on gettext, now works without.
+   Thanks to alindeman.
+
+ * Change: removed last ngettext() call, use gTranslate instead.
+
 2005-12-28 Chris Kelly <ckdake@ckdake.com> 1.5.2-RC1
 
  * Release: 1.5.2-RC1
